# sapin-sapin

./: .gitignore  README.md  docker-compose.yml  sapin-sapin.code-workspace
.github/workflows/: lint-backend.yaml  lint-frontend.yaml  pytest-backend.yaml
backend/: .coverage  .dockerignore  Dockerfile  dev-server.sh  dev_entrypoint.sh  prod_entrypoint.sh  pyproject.toml
backend/backend/: db.py
backend/backend/db/: management.py
backend/backend/models/: __init__.py  base.py  data.py  rules.py  tags.py  users.py
backend/backend/server/: auth.py  initialization.py  logging.py  main.py  migrations.py  routes.py  utils.py  wsgi.py
backend/backend/server/blueprints/: __init__.py  data.py  users.py  utils.py
backend/config/: dev_config.py  gunicorn.conf.py  prod_config.py  test_config.py
backend/tests/: conftest.py  constants.py
backend/tests/models/: conftest.py  test_data.py  test_users.py
backend/tests/server/: conftest.py  test_auth.py
backend/tests/server/blueprints/: test_data.py  test_users.py  test_utils.py
backend/tests/server/blueprints/data/: test_data_events.py  test_data_series.py
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package.json  vitest.config.ts
frontend/assets/: theme.scss
frontend/components/: Activity.vue  LandingCard.vue  Navbar.vue  SideNavbar.vue  UserForm.vue  UserFormInput.vue
frontend/composables/: authorizingFetch.ts  fetch.ts  routes.ts
frontend/layouts/: dashboard.vue  landing.vue  other.vue
frontend/middleware/: auth.global.ts
frontend/pages/: data.vue  index.vue  (+3 more)
services/: nginx.conf
(+42 files in other folders)
