[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ez Ablaza <ezra.ablaza.inbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
