[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ez Ablaza <ezra.ablaza.inbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.0"
flask = "^3.0.1"
gunicorn = "^21.2.0"
bcrypt = "^4.1.2"
flask-cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
