[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ez Ablaza <ezra.ablaza.inbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.0"
flask = "^3.0.1"
gunicorn = "^22.0.0"
bcrypt = "^4.1.2"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
